style.css
.bg-1 {
  background-color: #ff0000;
}

.bg-2 {
  background-color: #00ff00;
}

.bg-3 {
  background-color: #0000ff;
}

.bg-4{
  background-color: #00ffff;
}

.bg-5{
  background-color: #ffff00;
}

.bg-6{
  background-color: #ff00ff;
}

/*

Classes generated using
$ cat index.html | grep '<section class="' | sed 's/.*section class="/\./;s/">/ {\nbackground-color:;\n}\n/'

*/

.highlighted {
  background-color: aqua;
}

.featured-stories {
  background-color: blueviolet;
}

.top-travel-more {
  background-color: chocolate;
}

.top-story {
  background-color: coral;
}

.culture-travel {
  background-color: brown;
}

.more-stories {
  background-color: aqua;
}

.opinion-latest-signup {
  background-color: lightblue;
}

.opinion {
  background-color: lightcoral;
}

.latest-news {
  background-color: lightgreen;
}

.sign-up {
  background-color: skyblue;
}

.in-the-magazine {
  background-color: pink;
}

.newsweek-conversations {
  background-color: darkcyan;
}

.editors-pick {
  background-color: darkorchid;
}

.featured-slideshows {
  background-color: darkred;
}

.subscribe-newsletter {
  background-color: magenta;
}

.subscribe {
  background-color: maroon;
}

.newsletter {
  background-color: mediumpurple;
}

.page-footer {
  background-color: yellow;
}

.document-header {
background-color: yellowgreen;
}

/* body{
  padding-top: 150px;
} */

.top-space-lg{
  height: 190px;
}

.top-space{
  height: 65px;
}

.inline-menu{
  margin-top: 20px;
}

.container-fluid{
  /* margin: 15px; */
  padding-left: 40px;
  padding-right: 40px;
}

.mobile-navbar{
  background-color: red;
}

.nav-menu{
  /* display: flex; */
  /* margin-left: 0; */
  /* justify-content: flex-start; */
  background-color: lightpink;
  /* flex-shrink: 0; */
  /* flex-wrap: wrap; */
}

.menu-wrap{
  /* display: flex; */
  padding: 12px;
  margin-top: -20px;
  background-color: lightseagreen;
}

.nav-item{
  background-color: red;
  padding-left: 12px;
  padding-right: 12px;
  border-left: 1px solid gray;
  /* margin: 2px; */
}

.main-header{
  /* display: flex; */
  padding-bottom: 20px;
  padding-top: 30px;
  /* justify-content: space-between; */
}

.signin-subscribe{
/* display: flex; */
}

.header-date{
  /* display: flex; */
  /* flex-direction: column; */
  /* justify-content: flex-end; */
}

.signin-subscribe{
  /* display: flex; */
  /* justify-content: flex-end; */
  /* align-items: flex-end; */
}

.roboto-bold{
  font-weight: bold;
  font-family: 'Roboto Condensed', Arial, Helvetica, sans-serif;
}

.article-picture{
  position: relative;
}

.image-category{
  position: absolute;
  bottom:0;
  left:0;
}

.article-image{
  /* width: 100%; */
  /* align-self: center; */
}

.small-image{
  width: 135px;
  /* align-self: center; */
  /* height: auto; */
}

.culture-category{
  background-color: gray;
  font-size: 13px;
  font-family:  Helvetica, Arial,sans-serif;
  padding: 3px;
}

.icon-image{
  width: 30px;
  height: auto;
  background-color: red;
  margin: 10px;
}

.signup-text{
  font-size: 19px;
  /* font-weight: bold; */
  /* font-family: 'Roboto Condensed', Arial, Helvetica, sans-serif; */
  color: #222222;
  line-height: 19px;
}

.signup-button{
  border:none;
  margin-top: 20px;
  margin-bottom: 20px;
  background-color: darkgray;
  padding: 8px;
  color: white;
  /* font-weight: bold; */
  font-size: 19px;
  /* font-family: 'Roboto Condensed', Arial, Helvetica, sans-serif; */
}

.signup-button:hover{
  background-color: gray;
}

.small-link, .small-link:hover{
  font-size: 15px;
  /* font-weight: bold; */
  /* font-family: 'Roboto Condensed', Arial, Helvetica, sans-serif; */
  text-decoration: none;
  color: black;
}

.sign-up{
  background-color: bisque;
}

.cover-picture{
  background-image: url(https://d.newsweek.com/en/full/1562430/fea-futuretechces-09-1198129532.jpg?w=466&h=311&q=90&f=130c3646b7506b034455b08ee3709740);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  height: 25vw;
  min-height: 300px;
}

.subscribe-covers{
  padding-right: 150px;
  padding-bottom: 50px;
  position: relative;
}

.subscribe-top{
  position:absolute;
  top:20px;
  left: 100px;
}

.newsletter-picture{
  background-image: url(https://d.newsweek.com/en/full/1541302/starting5-homepage.png?w=397&amp;h=265&amp;q=90&amp;f=742bce9a6f72dd8f19ba2e7fd5db06e5);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  /* height: 25vw; */
  width: 100%;
  height: 100%;
  min-height: 200px;
}

ul{
  list-style: none;
  padding-left: 0;
}

li{
  padding: 0 5px 0 5px;
  border-right: solid 1px gray;
}

.bold-text{
  font-weight: bold;
}

li a{
  text-decoration: none;
  color: gray;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 14px;
}

li a:hover{
  text-decoration: none;
  color: black;
}

.burger-bar{
    width: 25px;
    height: 2px;
    background-color: rgba(255,255,255,0.5);
    margin: 6px 0;
}

.navbar-text{
  font-size: 19px;
  /* font-weight: bold; */
  /* font-family: 'Roboto Condensed', Arial, Helvetica, sans-serif; */
  color: black;
}

.section-header{
  /* font-family: 'Roboto Condensed', Arial, Helvetica, sans-serif; */
  font-size: 16px;
  /* font-weight: bold; */
  color: gray;
}

.main-section-header{
  /* font-family: 'Roboto Condensed', Arial, Helvetica, sans-serif; */
  font-size: 19px;
  /* font-weight: bold; */
  color: black;
}

.secondary-section-header{
  /* font-family: 'Roboto Condensed', Arial, Helvetica, sans-serif; */
  font-size: 22px;
  /* font-weight: bold; */
  color: red;
}

.article-header-small{
  font-size: 17px;
  /* font-family: 'Roboto Condensed', Arial, Helvetica, sans-serif; */
  /* font-weight: bold; */
  color: black;  
  /* text-decoration: none; */
}

.article-header-small a{
  color: black;
  text-decoration: none;
}

.article-header-small a:hover{
  text-decoration: underline;
  text-decoration-color: red;
}

.article-header-medium{
  font-size: 20px;
  color: black;
}

.article-header-medium a{
  color: black;
  text-decoration: none;
}

.article-header-medium a:hover{
  text-decoration: underline;
  text-decoration-color: red;
}

.culture-header{
  font-family: Lora, serif;
  font-size: 20px;
  color: black;
}

.culture-header a{
  text-decoration: none;
  color: black;
}

.culture-article{
  background-color: lightgrey;
}

.culture-articles{
  padding-left: 15px;
  padding-right: 15px;
}

.article-header-large{
  font-size: 24px;
  /* font-family: 'Roboto Condensed', Arial, Helvetica, sans-serif; */
  /* font-weight: bold; */
  color: black;  
}

.article-header-large a{
  color: black;
  text-decoration: none;
}

.article-header-large a:hover{
  text-decoration: underline;
  text-decoration-color: red;
}

.article-text{
  font-family: Arial, Helvetica, sans-serif;
  font-size: 15px;
}

.header-date{
  font-size: 16px;
  font-family: 'Roboto Condensed', Arial, Helvetica, sans-serif;
  color: white;
  margin-left: 30px;
}

.signin-subscribe{
  font-size: 18px;
  /* font-family: 'Roboto Condensed', Arial, Helvetica, sans-serif; */
  /* font-weight: bold; */
}

.white-text{
  color: white;
}

.black-text{
color: black;
}

.red-text{
  color:red;
}

.gray-text{
  color: gray;
}

.red-highlight-text{
  background-color: red;
  color: white;
  padding: 3px 10px 3px 10px;
}

.white-highlight-text{
  background-color: white;
  color: red;
  padding: 3px 10px 3px 10px;
}

.article-tag-gray{
  font-size: 18px;
  /* font-family: 'Roboto Condensed', Arial, Helvetica, sans-serif; */
  /* font-weight: bold; */
  color:red;
  background-color: rgba(240,240,240,.7);
  /* opacity: 0.1; */
  padding: 8px;
}

.opinion-author{
  font-size: 14px;
  /* font-family: 'Roboto Condensed', Arial, Helvetica, sans-serif; */
  /* font-weight: bold; */
  color: #777777;
}

.opinion-header{
  font-size: 17px;
  /* font-family: 'Roboto Condensed', Arial, Helvetica, sans-serif; */
  /* font-weight: bold; */
  color: black;
}

.opinion-header a{
  color: black;
  text-decoration: none;
}

.opinion-header a:hover{
  color:red;
}

.opinion-article, .latest-article, .more-article{
  padding-top: 8px;
  padding-bottom: 8px;
  border-bottom: solid 1px lightgray;
}

.border-none{
  border: none;
}

.border-top{
  border-top: solid 1px lightgray;
}

.signup-section{
  border: solid 1px gray;
  background-color: lightgray;
  margin: 20px;
  padding: 20px;
}

.in-magazine-categories{
  font-size: 16px;
}

.box-bg{
  background-image: url(https://g.newsweek.com/themes/newsweek/images/icon-slideshows-nw.png);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  width: 70px;
  height: 52px;
}

.box-number{
  margin-left: 22px;
  margin-top: 8px;
}

.box-bg:hover{
  text-decoration: none;
  color: red;
}

.horizontal-separator{
  height: 1px;
  background-color: lightgray;
  margin: 8px 0 8px 0;
}

.subscribe-button{
  border:none;
  margin-top: 20px;
  margin-bottom: 20px;
  background-color: red;
  padding: 8px;
  color: white;
  /* font-weight: bold; */
  font-size: 19px;
  /* font-family: 'Roboto Condensed', Arial, Helvetica, sans-serif; */
}

.subscribe-button:hover{
  background-color: darkred;
}

.copyright{
  font-size: 12px;
}

.features-link{

}

.features-link{
  border:none;
  background-color: lightgray;
  padding: 8px;
  color: black;
  /* font-weight: bold; */
  font-size: 19px;
  /* font-family: 'Roboto Condensed', Arial, Helvetica, sans-serif; */
}

.features-link:hover{
  background-color: gray;
}

.social-icon{
  width: 25px;
  margin: 0 8px 0 8px;
}

.transparent-button{
  border: none;
  background: none;
}

